# HybridScalperFix

./: .gitignore  .railwayignore  .replit  QUICK_START_ORACLE.md  RAILWAY_DEPLOY.md  app.py  deploy.sh  pyproject.toml  railway.toml  scalper-bot.service
HybridScalper-main/: ORACLE_DEPLOY.md  Procfile  app.py  pyproject.toml  railway.toml  replit.md  requirements.txt
