[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "lxml>=6.0.2",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "tradingview-screener>=3.0.0",
    "yfinance>=1.0",
]
